@@ -1,3 +1,11 @@
+2005-01-19  Darin Adler <darin@apple.com>
+
+        Reviewed by vicki
+
+	- fixed <rdar://problem/3962559> stopAnimationsInView leaks after cvs-base
+ 
+        * WebCoreSupport.subproj/WebImageData.m: (+[WebImageData stopAnimationsInView:]): add a release
+
 2005-01-19  Chris Blumenberg  <cblu@apple.com>
 
 	Fixed: <rdar://problem/3961809> plug-in code attempts to load empty URL
